src/components/snes-log.css
.SnesLog {
  display: flex;
  flex-direction: column;
}

.SnesLog_TableHeader,
.SnesLog_TableBody_Instructions,
.SnesLog_TableFooter {
  position: relative;

  display: grid;
  grid-template-columns: repeat(11, auto);

  font-family: monospace;
  white-space: pre;
}

.SnesLog_TableHeader > *,
.SnesLog_TableBody_Instruction > *,
.SnesLog_TableFooter > * {
  text-align: center;
}

.SnesLog_TableHeader,
.SnesLog_TableFooter {
  font-weight: bold;
}

.SnesLog_TableBody {
  border: 1px solid var(--color-neutral-2);
  margin: 0.3em 0;
  padding: 0.3em 0;
}

.SnesLog_TableBody_Instructions {
  max-height: 30em;
  overflow-y: auto;
}

.SnesLog_TableBody_Instructions .dim {
  color: var(--color-neutral-2);
}

.SnesLog_TableBody_Instruction {
  display: contents;
  cursor: pointer;
}

.SnesLog_TableBody_Instruction.error {
  cursor: default;
}

.SnesLog_TableBody_Instruction:hover > * {
  background-color: var(--color-highlight-2);
}

.SnesLog_TableBody_Instruction.selected > * {
  background-color: var(--color-highlight-1);
}

.SnesLog_TableBody_Instruction.error > * {
  color: var(--color-error-1);
  font-weight: bold;
}

.SnesLog_CompilationErrors,
.SnesLog_ExecutionErrors {
  display: flex;
  flex-direction: column;
  color: var(--color-error-1);
}

.SnesLog_CompilationErrors {
  margin-top: 0;
}

.SnesLog_ExecutionErrors {
  margin-top: 1em;
  font-size: 0.9em;
}

